tests/negative/test_move_eval_no_drop.orb
data Foo;

eval (fnc dropFoo (val:Foo::noDrop) ());

data Foo {
    x:i32
}::((drop dropFoo));

eval (fnc dropFoo (val:Foo::noDrop) () {});

eval (fnc foo (f:Foo::noDrop) () {
    >> f;
});

fnc main () () {
    eval (sym f:Foo);
    eval (foo f);
};